--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                                  style="z-index: 13;">
                                                 <input style="font-size: 14px; line-height: normal;" class="large-input border-radius-4px m-0 border-0 font-weight-300 required" name="email" placeholder="Your email address" type="email">
                                                 <input type="hidden" name="redirect" value="">
-                                                <button class="btn btn-medium text-fast-blue border-left border-0 border-color-extra-medium-gray py-0 submit" type="submit">Notify me</button>
+                                                <button class="btn btn-medium text-fast-blue border-left border-0 border-color-extra-medium-gray py-0 submit" type="submit">Join the Email List</button>
                                             </div>                                             
                                             <div class="form-results border-radius-4px d-none w-75 position-absolute"></div>
                                         </form>
@@ -459,6 +459,7 @@
                             <img src="images/logo-white@2x.png" alt="" data-ww="['111px','111px','111px','111px']" data-hh="['36px','36px','36px','36px']" width="222" height="72" style="width: 111px; height: 36px;">
                         </a>
                         <!-- LAYER NR. 7 (SOCIAL MEDIA ICON) -->
+                        <!-- FIXME: UPDATE LINKS HERE -->
                         <a class="tp-caption tp-static-layer text-medium" 
                            href="https://www.facebook.com/" target="_blank"
                            data-x="['left','left','center','center']" data-hoffset="['30','50','-60','-60']" 
@@ -486,8 +487,9 @@
                            data-paddingleft="[5,5,5,5]"
                            style="z-index: 999; display: inline-block; color: rgba(255,255,255,1);"><i class="fab fa-facebook-f"></i> </a>
                         <!-- LAYER NR. 8 (SOCIAL MEDIA ICON) -->
+                        
                         <a class="tp-caption tp-static-layer text-medium"
-                           href="https://twitter.com/" target="_blank"
+                           href="https://instagram.com/" target="_blank"
                            data-x="['left','left','center','center']" data-hoffset="['70','72','0','0']" 
                            data-y="['bottom','bottom','bottom','bottom']" data-voffset="['100','170','20','20']" 
                            data-lineheight="['14','14','14','10']"
@@ -511,9 +513,9 @@
                            data-paddingright="[5,5,5,5]"
                            data-paddingbottom="[5,5,5,5]"
                            data-paddingleft="[5,5,5,5]"
-                           style="z-index: 999; display: inline-block;color: rgba(255,255,255,1);"><i class="fab fa-twitter"></i></a>
+                           style="z-index: 999; display: inline-block;color: rgba(255,255,255,1);"><i class="fab fa-instagram"></i></a>
                         <!-- LAYER NR. 9 (SOCIAL MEDIA ICON) -->
-                        <a class="tp-caption tp-static-layer text-medium"
+                        <!-- <a class="tp-caption tp-static-layer text-medium"
                            href="https://www.linkedin.com/" target="_blank"
                            data-x="['left','left','center','center']" data-hoffset="['110','100','60','60']" 
                            data-y="['bottom','bottom','bottom','bottom']" data-voffset="['94','165','12','10']" 
@@ -537,7 +539,7 @@
                            data-paddingright="[5,5,5,5]"
                            data-paddingbottom="[5,5,5,5]"
                            data-paddingleft="[5,5,5,5]"
-                           style="z-index: 999; display: inline-block;color: rgba(255,255,255,1);"><i class="fab fa-linkedin-in"></i></a>
+                           style="z-index: 999; display: inline-block;color: rgba(255,255,255,1);"><i class="fab fa-linkedin-in"></i></a> -->
 
                     </div>
                     <div class="tp-bannertimer tp-bottom" style="height: 10px; background: rgb(216,215,220);"></div>	</div>
