--- a/home.html
+++ b/home.html
@@ -481,7 +481,7 @@
                         <div class="header-social-icon d-inline-block">
                             <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
                             <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <!-- <a href="http://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -850,12 +850,12 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-12 col-md-12 text-center">
-                            <h5 class="alt-font font-weight-300 text-extra-dark-gray mb-0 letter-spacing-minus-1px">We help our clients to build</h5>
+                            <h5 class="alt-font font-weight-300 text-extra-dark-gray mb-0 letter-spacing-minus-1px">Learn how to solve</h5>
                             <div class="cd-headline slide alt-font font-weight-600 title-extra-large text-extra-dark-gray line-height-170px lg-h-120px overflow-hidden">
                                 <span class="cd-words-wrapper">
-                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px is-visible">branding</b>
-                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px">marketing</b>
-                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px">design</b>
+                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px is-visible">BPC</b>
+                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px">BPC</b>
+                                    <b class="letter-spacing-minus-5px sm-letter-spacing-minus-3px">BPC</b>
                                 </span>
                             </div>
                         </div>
