--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                              data-paddingright="[0,0,0,0]"
                                              data-paddingbottom="[30,20,20,10]"
                                              data-paddingleft="[0,0,0,0]"
-                                             style="z-index: 10; font-weight: 600;">The website is in maintenance mode.</div>
+                                             style="z-index: 10; font-weight: 600;">Join us for weekly meetings!</div>
 
                                         <!-- LAYER NR. 4 (TEXT) -->
                                         <div class="tp-caption tp-resizeme text-extra-medium alt-font mx-auto mx-lg-0"
@@ -128,7 +128,7 @@
                                              data-paddingright="[0,0,0,0]"
                                              data-paddingbottom="[60,40,30,20]"
                                              data-paddingleft="[0,0,0,0]"
-                                             style="z-index: 10; font-weight: 300">We have almost done all the technical improvements and will be back very soon. Thank you for your patience!</div>
+                                             style="z-index: 10; font-weight: 300">Solve challenging logic puzzles with friends! Snacks provided. Learn to make your own puzzles and contribute to our annual Brown puzzle event!</div>
 
                                         <!-- LAYER NR. 5 (Search Input) -->
                                         <form action="email-templates/subscribe-newsletter.php" method="post">
