--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
-        <title>Litho – The Multipurpose HTML5 Template</title>
+        <title>Brown Puzzle Club</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="ThemeZaa">
